# PubMed

./: README.md  bloodcancer.csv  bonecancer.csv  cancer.csv  cancer2.csv  covid19.csv  pyproject.toml  research_papers.csv  results.csv
pubmedapi/: fetcher.py  main.py
