[project]
name = "pubmedapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ksriramreddy",email = "k.sriramreddy9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]
packages = [{include = "pubmedapi"}] 


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "pubmedapi.main:main"


